plugins {
    alias (libs.plugins.spring.boot)
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'jacoco'
    id 'catalogservice.java-checks'
}

group = 'org.niis.xroad.catalog.lister'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://artifactory.niis.org/artifactory/xroad-maven-snapshots/")
    }
    maven {
        url = uri("https://artifactory.niis.org/artifactory/xroad-maven-releases/")
    }
}

bootJar {
    enabled = true
    layered {
        enabled = false
    }
    includeTools = false
}

jar {
    enabled = false
}

dependencies {
    implementation project(':xroad-catalog-persistence')
    implementation (libs.jakarta)
    implementation (libs.spring.doc)
    implementation (libs.commons.csv)
    implementation (libs.spring.boot.jpa)
    implementation (libs.spring.boot.web)
    implementation (libs.jackson)
    implementation (libs.guava)
    implementation (libs.lombok)
    implementation (libs.xmlunit.core)
    implementation (libs.xroad.configuration.client)
    implementation (libs.xrd4j.server)
    annotationProcessor (libs.lombok)
    testImplementation (libs.spring.boot.test)
    testRuntimeOnly (libs.junit.launcer)
    testImplementation (libs.mockito)
    testImplementation (libs.lombok)
    testImplementation (libs.h2.database)
    testAnnotationProcessor (libs.lombok)
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
    finalizedBy jacocoTestReport
}

springBoot {
    mainClass = 'org.niis.xroad.catalog.lister.ListerApplication'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
}
